changed returned type Pageable repository methods from List to Page and deleted repository methods that count total elements to get total elements without additional database call